<resources>
    <string name="app_name">Tugas Day5</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="tipe_pelanggan">Tipe Pelanggan</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="biasa">Biasa</string>
    <string name="masukkan_kode">Masukkan kode</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="proses">Proses</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="transaksi_hari_ini">Transaksi hari ini :</string>
    <string name="tipe_Pelanggan">Tipe Pelanggan</string>
    <string name="kode_barang">Kode Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="diskon">Diskon</string>
    <string name="total_harga">Total Harga</string>
    <string name="terima_kasih">Terima Kasih!</string>
    <string name="share">Share</string>
    <string name="change_language">Change Language</string>
    <string-array name="language_options">
        <item>Bahasa Indonesia</item>
        <item>English</item>
        <item>Deutsch</item>
        <item>ไทย</item>
    </string-array>

    <string-array name="language_codes">
        <item>id</item>
        <item>en</item>
        <item>de</item>
        <item>th</item>
    </string-array>

</resources>